--- a/src/ResumeLayout.css
+++ b/src/ResumeLayout.css
@@ -1,10 +1,11 @@
+
+
 /* Resume Builder Container */
 .container {
   display: flex;
   gap: 30px;
   padding: 20px;
   background: #f8f9fa;
-  /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
 }
 
 /* Left Section - Form */
@@ -18,18 +19,17 @@
 /* Right Section - Resume Preview */
 .container-printable {
   background: #ffffff;
-  border-radius: 12px;
+  /* border-radius: 12px; */
   padding: 30px;
   width: 100%;
-  max-width: 750px;
+  max-width: 600px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.08);
-  font-family: Arial, sans-serif;
   line-height: 1.6;
 }
 
 /* Input Fields */
 .input {
-  width: 100%;
+  width: 90%;
   padding: 10px 12px;
   margin: 10px 0 20px;
   border: 1px solid #d1d5db;
@@ -63,6 +63,7 @@ button {
   padding: 10px 18px;
   border-radius: 8px;
   margin-top: 20px;
+  margin-left:10px;
 }
 
 .nav-button:hover,
@@ -75,8 +76,14 @@ button {
   margin-bottom: 24px;
 }
 
+.section p{
+  font-size: 14px;
+  /* color: #374151; */
+  margin-top: 8px;
+}
+
 .section-title {
-  font-size: 18px;
+  font-size: 14px;
   font-weight: 600;
   border-left: 4px solid #3b82f6;
   padding-left: 12px;
@@ -92,19 +99,19 @@ header {
 }
 
 header h1 {
-  font-size: 28px;
+  font-size: 18px;
   font-weight: bold;
   text-align: center;
 }
 
 header h2 {
-  font-size: 17px;
+  font-size: 14px;
   text-align: center;
   margin-top:-10px;
 }
 
 header p {
-  font-size: 15px;
+  font-size: 13px;
   margin: 4px 0;
 }
 
@@ -119,7 +126,9 @@ header p {
   justify-content: space-between;
   align-items: center;
   color: #1e293b;
+  font-size: 14px;
 }
+
 
 .item-subtitle {
   font-size: 14px;
@@ -128,7 +137,7 @@ header p {
 }
 
 .date {
-  font-size: 15px;
+  font-size: 13px;
   color: black;
   font-weight: normal;
 }
@@ -150,6 +159,10 @@ label {
   font-weight: 500;
   display: block;
   margin-top: 10px;
+}
+
+button {
+  cursor: pointer;
 }
 
 /* Scrollbar for form section */
